--- a/qrfront/package.json
+++ b/qrfront/package.json
@@ -11,52 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.8",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^12.0.2",
-    "@angular/common": "^12.2.8",
-    "@angular/compiler": "~12.2.8",
-    "@angular/core": "^12.2.8",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "~11.2.13",
+    "@angular/core": "^11.2.14",
     "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "^12.2.8",
-    "@angular/platform-browser": "~12.2.8",
-    "@angular/platform-browser-dynamic": "~12.2.8",
-    "@angular/router": "~12.2.8",
+    "@angular/forms": "^11.2.14",
+    "@angular/platform-browser": "~11.2.13",
+    "@angular/platform-browser-dynamic": "~11.2.13",
+    "@angular/router": "~11.2.13",
     "@auth0/angular-jwt": "^5.0.2",
-    "@fortawesome/angular-fontawesome": "^0.8.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@popperjs/core": "^2.9.2",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "angular2-flash-messages": "^3.0.1",
     "angular2-qrscanner": "^1.0.7",
-    "bootstrap": "^5.1.1",
-    "express": "^4.17.1",
-    "font-awesome": "^4.7.0",
+    "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "jsqr": "^1.4.0",
+    "ng-image-slider": "^2.8.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-mask": "^12.0.0",
     "ngx-owl-carousel": "^2.0.7",
-    "ngx-owl-carousel-o": "^6.0.0",
     "owl-carousel": "^1.0.0",
+    "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.7",
     "sweetalert2": "^11.0.12",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.8",
-    "@angular/cli": "~12.2.8",
-    "@angular/compiler-cli": "~12.2.8",
+    "@angular-devkit/build-angular": "~0.1102.12",
+    "@angular/cli": "~11.2.12",
+    "@angular/compiler-cli": "~11.2.13",
     "@angular/material": "^10.1.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -64,6 +60,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.1.5"
   }
 }
